Fixed offset and pagination plus wrap spacing on remaining pages.

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -66,7 +66,7 @@
 }
 
 // For single posts
-.single-post .wrap {
+.single-post .wrap, .archive .wrap, .search .wrap, .page .wrap {
     padding: 50px 0;
 }
 
@@ -162,7 +162,7 @@
         .author-avatar {
             margin: 1em 0;
         }
-    }
+      }
     }
   }
 }
