--- a/style.css
+++ b/style.css
@@ -937,7 +937,7 @@ button.swiper-pagination-bullet {
             flex: 0 0 30%;
     border-left: 1px solid #d8d8d8; }
 
-.single-post .wrap {
+.single-post .wrap, .archive .wrap, .search .wrap, .page .wrap {
   padding: 50px 0; }
 
 .articles .main-content .main, .podcasts .main-content .main {
